<resources>
    <string name="app_name">WikiDriver</string>
    <string name="title_advert">Advert</string>
    <string name="title_chat">Chat</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_social">Social</string>
    <string name="title_settings">Settings</string>
    <string name="create_your_account">Create your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login_difpri">Login to Difpri</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOG In</string>
    <string name="all">All</string>
    <string name="sale_rent">Sale / Rent</string>
    <string name="mechanical_bodywork">Mechanical / Bodywork</string>
    <string name="course_driver">Course / Driver</string>
    <string name="other">Other</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="please_wait">Please wait...</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="car_brand">Car Brand</string>
    <string name="car_model">Car Model</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="logout">LOGOUT</string>
    <string name="search_drivers">Search Drivers</string>
    <string name="delete">Delete</string>
    <string name="comments">Comments</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="comment">Comment</string>
    <string name="message">Message</string>
    <string name="create_post">Create Post</string>
    <string name="terms">By signing up you agree to our <u>Terms &amp; Conditions</u>.</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="email_no_exist">Email doesn\'t exist</string>
    <string name="email_exist">Email already exists</string>
    <string name="enable_all_settings">Please enable all settings</string>
    <string name="accessibility_title">Accessibility permission</string>
    <string name="accessibility_content">In order to control other apps, DifpriDriver needs the "Accessibility" permission to be activated.</string>
    <string name="confirm">CONFIRM</string>
    <string name="draw_title">Draw Over Apps Permission</string>
    <string name="draw_content">In order to control other apps, DifpriDriver needs the "Draw Over Apps" permissions to be activated.</string>
    <string name="usage_title">Usage Access Permission</string>
    <string name="usage_content">In order to manage other apps, DifpriDriver needs the permission "Usage Access" to be activated.</string>
    <string name="click_back_exit">"Please click BACK again to exit"</string>
    <string name="accept_terms">Terms &amp; Conditions</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="select_apps_title">Select Apps</string>
    <string name="select_apps_content">Choose which apps you want Difpri to control.</string>
    <string name="app_version">App Version</string>
    <string name="rate_title">Rate &amp; feedback</string>
    <string name="rate_content">Rate Difpri in the Playstore and leave your feedback.</string>
    <string name="contact_title">Contact us</string>
    <string name="contact_content">Contact support if you have any questions.</string>
    <string name="profile">Profile</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_profile_content">Edit your profile\'s informations</string>
</resources>