<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <PreferenceScreen
            android:title="@string/select_apps_title"
            android:summary="@string/select_apps_content"
            android:key="selectApps"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <PreferenceScreen
            android:title="@string/app_version"
            android:summary="1.0"
            />
        <PreferenceScreen
            android:title="@string/rate_title"
            android:summary="@string/rate_content"
            android:key="rate"/>
        <PreferenceScreen
            android:title="@string/contact_title"
            android:key="contact"
            android:summary="@string/contact_content" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/profile">
        <PreferenceScreen
            android:title="@string/edit_profile_title"
            android:key="profile"
            android:summary="@string/edit_profile_content"/>
    </PreferenceCategory>
</PreferenceScreen>