<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context="app.m26.wikidriver.activities.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        app:elevation="0dp"
        app:theme="@style/ToolbarColoredBackArrow"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@android:color/white"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:textColor="@android:color/black"
            android:text="@string/login_difpri"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_gravity="center_horizontal"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="48dp"
            android:layout_height="wrap_content">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:id="@+id/edtEmail"
                android:inputType="textEmailAddress"
                android:textColorLink="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:id="@+id/edtPassword"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/txtForgotPassword"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="16dp"
            android:layout_gravity="end"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:id="@+id/btnLogIn"
            android:typeface="monospace"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_login_background"
            android:textColor="@android:color/white"
            android:textAllCaps="true"/>
    </LinearLayout>

</RelativeLayout>