<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context="app.m26.wikidriver.activities.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:weightSum="6"
            android:layout_margin="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="sans"
                android:textColor="@android:color/black"
                android:text="@string/create_your_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="48dp"

                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1">
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:typeface="monospace"
                        android:backgroundTint="@color/colorAccent"
                        android:id="@+id/edtFirstName"
                        android:inputType="text"
                        android:textColorLink="@color/colorAccent"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:hint="@string/first_name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:typeface="monospace"
                        android:backgroundTint="@color/colorAccent"
                        android:id="@+id/edtLastName"
                        android:inputType="text"
                        android:textColorLink="@color/colorAccent"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:hint="@string/last_name"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1">
                    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:typeface="monospace"
                        android:backgroundTint="@color/colorAccent"
                        android:id="@+id/edtCountry"
                        android:inputType="textCapWords"
                        android:textColorLink="@color/colorAccent"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:hint="@string/country"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">
                    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:typeface="monospace"
                        android:backgroundTint="@color/colorAccent"
                        android:id="@+id/edtCity"
                        android:inputType="textCapWords"
                        android:textColorLink="@color/colorAccent"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:hint="@string/city"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:typeface="monospace"
                    android:id="@+id/edtEmail"
                    android:inputType="textEmailAddress"
                    android:textColorLink="@color/colorAccent"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:typeface="monospace"
                    android:id="@+id/edtPhoneNumber"
                    android:inputType="phone"
                    android:textColorLink="@color/colorAccent"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:hint="@string/phone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:id="@+id/edtPassword"
                    android:inputType="textPassword"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_terms"
                android:padding="8dp"
                android:layout_marginTop="20dp">

                <net.igenius.customcheckbox.CustomCheckBox
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:checked="false"
                    android:id="@+id/chbxTerms"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/txtTerms" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/create_account"
                android:id="@+id/btnCreate"
                android:typeface="monospace"
                android:layout_marginTop="14dp"
                android:background="@drawable/btn_login_background"
                android:textColor="@android:color/white"
                android:textAllCaps="true"/>

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        app:elevation="0dp"
        app:theme="@style/ToolbarColoredBackArrow"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@android:color/white"
        android:layout_alignParentTop="true"/>

</RelativeLayout>